--- a/src/main/resources/github/mariapas235/view/logInWorker.fxml
+++ b/src/main/resources/github/mariapas235/view/logInWorker.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -20,17 +21,34 @@
             <Font size="39.0" />
          </font>
       </Text>
-      <TextField layoutX="752.0" layoutY="457.0" prefHeight="52.0" prefWidth="415.0" />
+      <TextField fx:id="TextFieldEmail" layoutX="752.0" layoutY="457.0" prefHeight="52.0" prefWidth="415.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor>
+         <font>
+            <Font size="22.0" />
+         </font>
+      </TextField>
       <Text fill="#fea500" layoutX="748.0" layoutY="601.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña:">
          <font>
             <Font size="40.0" />
          </font>
       </Text>
-      <TextField layoutX="752.0" layoutY="646.0" prefHeight="52.0" prefWidth="415.0" />
-      <Button layoutX="890.0" layoutY="761.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="132.0" style="-fx-background-color: #fea500;" text="Iniciar Sesión">
+      <TextField fx:id="TextFieldPassword" layoutX="752.0" layoutY="646.0" prefHeight="52.0" prefWidth="415.0">
+         <cursor>
+            <Cursor fx:constant="TEXT" />
+         </cursor>
+         <font>
+            <Font size="22.0" />
+         </font>
+      </TextField>
+      <Button fx:id="ButtonPrincipalPage" layoutX="890.0" layoutY="761.0" mnemonicParsing="false" onMouseClicked="#LogInWorker" prefHeight="52.0" prefWidth="132.0" style="-fx-background-color: #fea500;" text="Iniciar Sesión">
          <font>
             <Font size="18.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </AnchorPane>
