--- a/src/main/resources/github/mariapas235/view/insertToolForm.fxml
+++ b/src/main/resources/github/mariapas235/view/insertToolForm.fxml
@@ -69,7 +69,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </ImageView>
-      <Button fx:id="buttonInsertTool" layoutX="852.0" layoutY="543.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="139.0" style="-fx-background-color: #fea500;" text="Añadir">
+      <Button fx:id="buttonInsertTool" layoutX="852.0" layoutY="543.0" mnemonicParsing="false" onMouseClicked="#insertToolButton" prefHeight="96.0" prefWidth="139.0" style="-fx-background-color: #fea500;" text="Añadir">
          <font>
             <Font size="26.0" />
          </font>
