--- a/src/main/resources/github/mariapas235/view/showToolsBoss.fxml
+++ b/src/main/resources/github/mariapas235/view/showToolsBoss.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="github.mariapas235.view.ShowToolsBossController">
    <children>
@@ -22,5 +24,10 @@
             <Image url="@flecha.png" />
          </image>
       </ImageView>
+      <Text layoutX="230.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Haga doble click sobre una pieza si desea borrarla">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
